Criado através do Colab

--- a/CogniKids.ipynb
+++ b/CogniKids.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNID72gEaI7AyA+fYoO59FB",
+      "authorship_tag": "ABX9TyOA4KgXdvJqfGRAPS9qEzyi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,8 +23,32 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/difrederico/CogniKids/blob/main/C%C3%B3pia_de_CogniKids.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mariaclbraganca/CogniKids/blob/main/CogniKids.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Como Executar\n",
+        "Este notebook contém o código completo e funcional do aplicativo. Para executá-lo:\n",
+        "\n",
+        "No menu superior do Colab, vá em Ambiente de execução.\n",
+        "Clique em Reiniciar sessão e executar tudo.\n",
+        "A interação com o aplicativo (menus, perguntas, etc.) acontecerá no campo de saída da última célula.\n",
+        "Usuários de Teste (Pré-Cadastrados)\n",
+        "Para facilitar a demonstração e os testes das funcionalidades, o sistema já inicia com os seguintes usuários cadastrados. Você pode usá-los para fazer login diretamente sem precisar criar um novo perfil.\n",
+        "\n",
+        "| Perfil    | Nome              | Usuário | Senha |\n",
+        "|-----------|-------------------|---------|-------|\n",
+        "| Professor | Prof. Alan Turing | `alan`  | `123` |\n",
+        "| Pai/Mãe   | Maria Santos      | `maria` | `123` |\n",
+        "| Aluno     | João Santos       | `joao`  | `123` |\n",
+        "\n",
+        "Observação: Fique à vontade para também testar o fluxo de cadastro criando novos perfis através da tela inicial."
+      ],
+      "metadata": {
+        "id": "t0NLVW7vM6Yi"
+      }
     },
     {
       "cell_type": "markdown",
